# exhaustive

./: .gitignore  Cargo.toml  README.md
exhaustive_macros/: Cargo.toml  README.md
exhaustive_macros/examples/: readme.rs
exhaustive_macros/src/: lib.rs
src/: impls.rs  lib.rs
tests/: tests.rs
