[package]
name = "exhaustive"
version = "0.2.2"
authors = ["Jonathan Brouwer <jonathantbrouwer@gmail.com>"]
description = "The trait for generating all values of a type, and a property-based test macro."
keywords = ["property", "arbitrary", "testing", "quickcheck", "fuzz"]
edition = "2021"
license = "MIT"
repository = "https://github.com/JonathanBrouwer/exhaustive"

[dependencies]
exhaustive_macros = { version = "=0.2.2", optional = true, path = "./exhaustive_macros" }

[features]
default = ["macros"]
macros = ["exhaustive_macros"]

